--- a/config/database.example.yml
+++ b/config/database.example.yml
@@ -2,7 +2,7 @@
 development:
   adapter: postgresql
   encoding: unicode
-  database: <YOUR_APP_NAME>_development
+  database: joor_assessment_development
   pool: 5
   username:
   password:
@@ -11,7 +11,7 @@ development:
 test:
   adapter: postgresql
   encoding: unicode
-  database: <YOUR_APP_NAME>_test
+  database: joor_assessment_test
   pool: 5
   username:
   password:
@@ -20,7 +20,7 @@ test:
 production:
   adapter: postgresql
   encoding: unicode
-  database: <YOUR_APP_NAME>_production
+  database: joor_assessment_production
   pool: 5
   username:
   password:
